--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="./">
+    <base href="https://gamecy.github.io/RustGameServerArchitect/">
     <title>Rust Game Server Architect</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
       }
     </style>
 
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="/index.css">
   <script type="importmap">
 {
   "imports": {
